# moonpkm

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
cli/: requirements.txt  setup.py
cli/agents/: context-builder.yaml  daily-review.yaml  inbox-processor.yaml
cli/moon/: __init__.py  agent.py  ai.py  brain.py  cli.py  config.py  search.py  vault.py
nvim/moon.nvim/lua/moon/: init.lua
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/vault/files/: route.ts
src/app/api/vault/graph/: route.ts
src/app/api/vault/search/: route.ts
src/components/: GraphView.tsx  KeyDrill.tsx  KeyboardShortcuts.tsx  Sidebar.tsx  VimEditor.tsx  VimTutor.tsx
